--- a/Lab-2/index.html
+++ b/Lab-2/index.html
@@ -16,6 +16,7 @@
         <ol>
           <li><a href="/Lab-1/index.html" >Lab1- Створення веб-сторінки з статичним текстом та розміщення в інтернеті</a></li>
           <li><a href="/Lab-2/index.html" >Lab2- Створення меню сайту. Розміщення проекту в репозиторії Github</a></li>
+          <li><a href="/Lab-3/index.html" >Lab3- Створення веб-сторінки. з формою "Анкета студента"</a></li>
         </ol>
       </li>
     </ul>
@@ -37,7 +38,7 @@
     </aside>
   </main>
   <footer>
-    <p>@Copyright 2025 by Khristia. All rights reversed</p>
+    <p>@Copyright 2025 by Yura. All rights reversed</p>
   </footer>
 </body>
 </html>
