--- a/Lab-3/index.html
+++ b/Lab-3/index.html
@@ -14,7 +14,7 @@
             <label>Full Name <input type="text" name="full_name" required></label><br>
             <label>Email <input type="email" name="email" required></label><br>
             <label>Password <input type="password" name="password" required></label><br>
-            <label>Age <input type="number" name="number" required></label><br>
+            <label>Age <input type="number" name="age" min="10" max="100" required></label><br>
             <label>Date of birth <input type="date" name="dob" required></label><br>
         </fieldset>
 
