--- a/Lab-3/index.html
+++ b/Lab-3/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
      <h1>Анкета студента</h1>
-    <form action="#" method="post">
+    <form action="data.php" method="post" enctype="multipart/form-data">
         <fieldset>
             <legend>Особисті дані</legend>
             <style>body{line-height: 2;} </style>
