--- a/Lab-2/index.html
+++ b/Lab-2/index.html
@@ -17,6 +17,7 @@
           <li><a href="/Lab-1/index.html" >Lab1- Створення веб-сторінки з статичним текстом та розміщення в інтернеті</a></li>
           <li><a href="/Lab-2/index.html" >Lab2- Створення меню сайту. Розміщення проекту в репозиторії Github</a></li>
           <li><a href="/Lab-3/index.html" >Lab3- Створення веб-сторінки. з формою "Анкета студента"</a></li>
+          <li><a href="/Lab-4/index.html" >Lab 4 – Веб-сторінка з мультимедіа</a></li>
         </ol>
       </li>
     </ul>
