--- a/Lab-4/index.html
+++ b/Lab-4/index.html
@@ -94,9 +94,9 @@
     </section>
 
     <section>
-      <h2>Наш відеоогляд на YouTube</h2>
+      <h2>Відеоогляд на YouTube</h2>
       <iframe width="80%" height="480" 
-              src="https://www.youtube.com/embed/VIDEO_ID" 
+              src="https://www.youtube.com/watch?v=PWPJxbaM7Fc" 
               title="YouTube video player" 
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
