--- a/Lab-4/index.html
+++ b/Lab-4/index.html
@@ -94,15 +94,19 @@
     </section>
 
     <section>
-      <h2>Наш відеоогляд на YouTube</h2>
-      <iframe width="80%" height="480" 
-              src="https://www.youtube.com/embed/VIDEO_ID" 
-              title="YouTube video player" 
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-      </iframe>
-    </section>
+  <h2>Відеоогляд на YouTube</h2>
+  <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+    <iframe
+      src="https://www.youtube-nocookie.com/embed/QqxRsF56nLQ"
+      title="YouTube video player"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+      style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+    ></iframe>
+  </div>
+</section>
+
 
     <section>
       <h2>Коледжі та університети Львова</h2>
