--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="/Lab-2/index.html" >Lab2- Створення меню сайту. Розміщення проекту в репозиторії Github</a></li>
           <li><a href="/Lab-3/index.html" >Lab3- Створення веб-сторінки. з формою "Анкета студента"</a></li>
           <li><a href="/Lab-4/index.html" >Lab 4 – Веб-сторінка з мультимедіа</a></li>
+          <li><a href="/PR-1/index.html" >PR 1 - Створення карти зображень та таблиць.</a></li>
         </ol>
       </li>
     </ul>
