--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="/Lab-4/index.html" >Lab 4 – Веб-сторінка з мультимедіа</a></li>
           <li><a href="/Lab-5/index.html" >Lab 5 – Робота з блочною моделлю. Інструменти веб-розробки Developer tools.</a></li>
           <li><a href="/Lab-6/index.html" >Lab 6 – Cтворення веб-сторінки з плаваючими, багатоколонковими та модальними елементами.</a></li>
+          <li><a href="/Lab-7/index.html" >Lab 7 – Використання CSS Flexbox для створення гнучких елементів.</a></li>
           <li><a href="/PR-1/index.html" >PR 1 - Створення карти зображень та таблиць.</a></li>
         </ol>
       </li>
