--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="/Lab-7/index.html" >Lab 7 – Використання CSS Flexbox для створення гнучких елементів.</a></li>
           <li><a href="/Lab-8/index.html" >Lab 8 – Застосування медіа-запитів для створення адаптивної верстки.</a></li>
           <li><a href="/PR-1/index.html" >PR 1 - Створення карти зображень та таблиць.</a></li>
+          <li><a href="/PR-2/index.html" >PR 2 - Методологія BEM.</a></li>
         </ol>
       </li>
     </ul>
