--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
           <li><a href="/Lab-10/index.html" >Lab 10 – Ініціалізації змінних. Робота з JavaScript в консолі браузера.</a></li>
           <li><a href="/Lab-11/index.html" >Lab 11 – Робота з циклами в JavaScript.</a></li>
           <li><a href="/Lab-12/index.html" >Lab 12 – Робота з функціями у JavaScript.</a></li>
+          <li><a href="/Lab-12/index.html" >Lab 13 – Робота з об’єктами. Прототипне наслідування.</a></li>
+          <li><a href="/Lab-14/index.html" >Lab 14 – Класи та наслідування. Проектування класів.</a></li>
           <li><a href="/PR-1/index.html" >PR 1 - Створення карти зображень та таблиць.</a></li>
           <li><a href="/PR-2/index.html" >PR 2 - Методологія BEM.</a></li>
         </ol>
