--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li><a href="/Lab-12/index.html" >Lab 12 – Робота з функціями у JavaScript.</a></li>
           <li><a href="/Lab-13/index.html" >Lab 13 – Робота з об’єктами. Прототипне наслідування.</a></li>
           <li><a href="/Lab-14/index.html" >Lab 14 – Класи та наслідування. Проектування класів.</a></li>
+          <li><a href="/Lab-15/index.html" >Lab 15 – Інтерактивна сторінка: додавання елементів у DOM, робота з подіями.</a></li>
           <li><a href="/PR-1/index.html" >PR 1 - Створення карти зображень та таблиць.</a></li>
           <li><a href="/PR-2/index.html" >PR 2 - Методологія BEM.</a></li>
         </ol>
