--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
           <li><a href="/Lab-13/index.html" >Lab 13 – Робота з об’єктами. Прототипне наслідування.</a></li>
           <li><a href="/Lab-14/index.html" >Lab 14 – Класи та наслідування. Проектування класів.</a></li>
           <li><a href="/Lab-15/index.html" >Lab 15 – Інтерактивна сторінка: додавання елементів у DOM, робота з подіями.</a></li>
+          <li><a href="/lab16_files_city-times-app/dist/index.html" >Lab 16 – Робота з датою і часом в JavaScript. npm та Webpack.</a></li>
           <li><a href="/PR-1/index.html" >PR 1 - Створення карти зображень та таблиць.</a></li>
           <li><a href="/PR-2/index.html" >PR 2 - Методологія BEM.</a></li>
         </ol>
       </li>
-    </ul>
+    </ul> 
   </nav>
   <main>
     <article id="labs">
